# qt

image_compare/build-image_compare-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  image_compare  image_compare.cbp
image_compare/image_compare/: CMakeLists.txt  compare_by_ecc.cpp  compare_by_feature.cpp  compare_method.cpp  image_compare.h  image_process.cpp  main.cpp
qt_console_image_compare/: CMakeLists.txt  main.cpp
qt_server/: main.cpp  server.cpp  server.h
